# MadChat

./: .env.example  .gitignore  copy_from_remote.sh  copy_to_remote.sh  deploy-compose.yml  docker-compose.yml  librechat.example.yaml  package-lock.json  package.json  plans.md
api/models/: Conversation.js
api/server/: experimental.js  index.js
api/server/controllers/: AuthController.js  UserController.js
api/server/controllers/agents/: callbacks.js  request.js
api/server/controllers/assistants/: chatV1.js  chatV2.js
api/server/controllers/realtime/: session.js  tools.js
api/server/middleware/validate/: convoAccess.js
api/server/routes/: browserSessions.js  convos.js  index.js  oauth.js  static.js
api/server/routes/realtime/: index.js
api/server/services/: BrowserSessions.js  GraphApiService.js  GraphTokenService.js  MCP.js  MCP.spec.js  ToolService.js
api/server/services/__tests__/: MCP.normalizeImage.test.js
api/server/utils/import/: fork.js  importBatchBuilder.js
api/strategies/: openidStrategy.js
client/: package.json
client/src/common/: agents-types.ts
client/src/components/Conversations/: Conversations.tsx
client/src/components/Nav/: Nav.tsx
client/src/hooks/: index.ts
client/src/store/: index.ts  voiceChat.ts
client/src/utils/: convos.ts  toolLabels.ts
mcp/browser/: .env.example  Dockerfile  README.md  package-lock.json  package.json  server.mjs
mcp/github/: Dockerfile
mcp/helloWorld/: README.md  pyproject.toml  server.py
mcp/replicate-image/: README.md  pyproject.toml
mcp/replicate-image/replicate_image/: server.py
(+49 files in other folders)
