[project]
name = "replicate-image-mcp"
version = "0.1.0"
description = "MCP server for image generation and editing using Replicate API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "replicate>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
replicate-image-mcp = "replicate_image.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["replicate_image"]

